# orkige

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  android_build_errors.txt  build-android-debug.bat  build-android.bat  configure-android-osx.sh  configure-android.bat  imgui.ini  selfcheck.oscene  vcpkg.json
orkige_core/: CMakeLists.txt
orkige_core/core_base/: Interface.cpp  Interface.h  Meta.h  Meta_Lua.h  Meta_None.h  Meta_Python.h  Object.cpp  Object.h  PropertyMacros.h  PropertyReflect.h  PropertySchema.cpp  PropertySchema.h  PropertyValue.cpp  PropertyValue.h  TypeInfo.cpp  TypeInfo.h  TypeManager.cpp  TypeManager.h  Value.cpp  Value.h
orkige_core/core_debug/: BenchmarkRecorder.cpp  BenchmarkRecorder.h  Breadcrumbs.cpp  Breadcrumbs.h  CVarCommand.cpp  CVarCommand.h  CVarManager.cpp  CVarManager.h  DebugMacros.h  DisableMemoryManager.h  EnableMemoryManager.h  LogChannel.cpp  LogChannel.h  LogConfig.cpp  LogConfig.h  LogLevels.cpp  LogManager.cpp  LogManager.h  MemoryManager.cpp  MemoryManager.h  MemorySampler.cpp  MemorySampler.h  Profile.h  ProfileManager.cpp  ProfileManager.h  ProfileNode.cpp  ProfileNode.h  Readme.txt
orkige_core/core_debugnet/: ControlAuth.h  DebugClient.cpp  DebugClient.h  DebugProtocol.cpp  DebugProtocol.h  DebugServer.cpp  DebugServer.h  DebugSocket.cpp  DebugSocket.h  HttpServer.cpp  HttpServer.h  Json.cpp  Json.h  TraceWriter.cpp  TraceWriter.h  WebSocket.cpp  WebSocket.h
orkige_core/core_event/: Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  EventListener.cpp  EventListener.h  EventManager.cpp  EventManager.h  EventType.cpp  EventType.h  GlobalEventManager.cpp  GlobalEventManager.h
orkige_core/core_filesystem/: ResourceReader.cpp  ResourceReader.h
orkige_core/core_game/: AppLifecycle.cpp  AppLifecycle.h  Application.cpp  Application.h  GameObject.cpp  GameObject.h  GameObjectComponent.cpp  GameObjectComponent.h  GameObjectManager.cpp  GameObjectManager.h  GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  LevelComponent.cpp  LevelComponent.h  LevelGrid.cpp  LevelGrid.h  LevelManager.cpp  LevelManager.h  LevelSequence.cpp  LevelSequence.h  PrefabSerializer.cpp  PrefabSerializer.h  PropertyTween.cpp  PropertyTween.h  SaveStore.cpp  SaveStore.h  SceneSerializer.cpp  SceneSerializer.h  TileComponent.cpp  TileComponent.h  TimeControl.cpp  TimeControl.h
orkige_core/core_module/: OrkigePrerequisites.h  module.cpp
orkige_core/core_project/: AssetDatabase.cpp  AssetDatabase.h  NativeModule.cpp  NativeModule.h  Project.cpp  Project.h
orkige_core/core_python/: PythonErrorHelper.h  PythonFunction.h  PythonInterpreter.cpp  PythonInterpreter.h
orkige_core/core_script/: ScriptDebugCore.h  ScriptEventBus.cpp  ScriptEventBus.h  ScriptEventPayload.cpp  ScriptEventPayload.h  ScriptManager.cpp  ScriptManager.h  ScriptRuntime.cpp  ScriptRuntime.h
orkige_core/core_serialization/: IArchive.cpp  IArchive.h  ISerializeable.cpp  ISerializeable.h  StreamOperators.h  XMLArchive.cpp  XMLArchive.h
orkige_core/core_tinyxml/: foreach.h  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
orkige_core/core_tween/: EaseLibrary.h  TimerManager.cpp  TimerManager.h  TweenManager.cpp  TweenManager.h
orkige_core/core_util/: AtmosphereDesc.h  AtmosphereSunDrive.h  AttributeHolder.h  BloomPreset.h  CameraFit.h  CameraFollow.h  Component.h  ComponentHolder.h  ConstantTimeCompare.h  FastDelegate.h  GradeDesc.h  GradeMath.h  Hash.h  IblPreset.h  IphoneUtil.h  IphoneUtil.mm  LocaleMatch.cpp  LocaleMatch.h  MacroRepeat.h  MaterialAsset.cpp  MaterialAsset.h  ModalStack.cpp  ModalStack.h  ModuleManagerFactory.cpp  ModuleManagerFactory.h  MusicFade.h  ObjectFactory.h  PathJail.cpp  PathJail.h  PlatformUtil.cpp  PlatformUtil.h  PlatformUtil.mm  PngWriter.cpp  PngWriter.h  SafeArea.cpp  SafeArea.h  ScreenStack.cpp  ScreenStack.h  ScrollMomentum.cpp  ScrollMomentum.h  (+46 more)
orkige_engine/: CMakeLists.txt
orkige_engine/engine_base/: EngineLog.cpp  EngineLog.h  Localisation.cpp  Localisation.h
orkige_engine/engine_fastgui/: DragEventData.cpp  DragEventData.h  FastGuiButton.cpp  FastGuiButton.h  FastGuiButtonBlink.cpp  FastGuiButtonBlink.h  FastGuiCheckBox.cpp  FastGuiCheckBox.h  FastGuiDecorWidget.cpp  FastGuiDecorWidget.h  FastGuiDragDropButton.cpp  FastGuiDragDropButton.h  FastGuiFactory.cpp  FastGuiFactory.h  FastGuiLabel.cpp  FastGuiLabel.h  FastGuiManager.cpp  FastGuiManager.h  FastGuiProgressBar.cpp  FastGuiProgressBar.h  FastGuiScrollView.cpp  FastGuiScrollView.h  FastGuiSelectMenu.cpp  FastGuiSelectMenu.h  FastGuiSlider.cpp  FastGuiView.h  (+25 more)
orkige_fontconverter/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  main.cpp
orkige_maxexport/: Blendshape.cpp  CMakeLists.txt  DllEntry.cpp  HowtoBuild.txt  Material.cpp  Material.h  MaterialSet.cpp  Mesh.cpp  OgreExporter.cpp  OrkigeMaxExporterData.cpp  OrkigeMaxExporterData.h  OrkigeMaxExporterLog.cpp  OrkigeMaxExporterLog.h  OrkigeMaxExporterMaxScript.cpp  OrkigeMaxExporterMaxScript.h  OrkigeMaxGUI.ms  ParamList.cpp  README.txt  Scene.cpp  Submesh.cpp  Vertex.h  _singleton.h  animation.h  blendshape.cpp  blendshape.h  material.cpp  material.h  materialSet.cpp  materialSet.h  maxExportLayer.h  mesh.cpp  mesh.h  ogreExporter.cpp  ogreExporter.h  orkige_maxexport.def  paramlist.cpp  paramlist.h  scene.cpp  scene.h  skeleton.cpp  (+3 more)
orkige_menuviewer/: Application.cpp  Application.h  CMakeLists.txt  CcFastGuiCoolDownButton.cpp  CcFastGuiCoolDownButton.h  CcFastGuiFactory.cpp  CcFastGuiFactory.h  CcGuiFactory.cpp  CcGuiFactory.h  DragDropButton.cpp  DragDropButton.h  FileUtils.cpp  FileUtils.h  OgreStaticPluginLoader.h  PreviewMenuState.cpp  PreviewMenuState.h  main.cpp
orkige_sceneoptimizer/: Application.cpp  Application.h  CMakeLists.txt  ConsoleCommands.h  DotSceneLoader.cpp  DotSceneLoader.h  FileUtils.cpp  FileUtils.h  MenuState.cpp  MenuState.h  MeshMerger.cpp  MeshMerger.h  OgreStaticPluginLoader.h  PickingMasks.h  main.cpp
tests/: CMakeLists.txt  OrkigeTestListener.h
(+1374 files in other folders)
